# Desafio-4-

./: .gitignore  GOOGLE_API_KEY_SETUP.md  Makefile  README.md  config.py.example  pyproject.toml  requirements.txt
.github/: ACTIONS_SETUP.md  GITHUB_ACTIONS_SETUP.md  README.md
.github/workflows/: ci-makefile.yml  ci.yml  deploy-makefile.yml  deploy.yml  pipeline.yml  run-sistema.yml  test-secret.yml
input_data/colaboradores/: ADMISSÃO ABRIL.xlsx  AFASTAMENTOS.xlsx  APRENDIZ.xlsx  ATIVOS.xlsx  DESLIGADOS.xlsx  ESTÁGIO.xlsx  EXTERIOR.xlsx  FÉRIAS.xlsx  VR MENSAL 05.2025.xlsx
input_data/configuracoes/: Base dias uteis.xlsx  Base sindicato x valor.xlsx  PAT_Configuracao.json
projeto_vr/: main.py
projeto_vr/passo_1_leitura_validacao/: __init__.py  consolidador_json.py  leitor_excel.py  relatorio_consolidado.py  validador_dados.py
projeto_vr/passo_2_tratamento_exclusoes/: __init__.py  analisador_exclusoes_llm.py
projeto_vr/passo_3_aplicacao_exclusoes/: aplicador_exclusoes.py
projeto_vr/passo_4_validacao_calculo/: __init__.py  calculador_beneficios.py  consultor_feriados_llm.py  gerenciador_feriados.py  orquestrador_passo4.py  validador_dados.py
projeto_vr/passo_5_entrega_final/: __init__.py  analisador_modelo_vr.py  gerador_planilha_final.py  orquestrador_passo5.py  validador_operadora.py
projeto_vr/passo_6_validacao_final/: __init__.py  auditor_llm.py  orquestrador_passo6.py
projeto_vr/utils/: __init__.py  exemplo_logging.py  logging_config.py
